added some stuff to hopefully make a windows exe